Java core classes.